pithy.html.charts: horizontal scrolling no longer requires js; various other improvements.

--- a/pithy/web/static/charts.css
+++ b/pithy/web/static/charts.css
@@ -28,60 +28,56 @@ figure.chart.categorical-numerical {
   --vis-width: max(var(--packed-vis-width), var(--wide-vis-width));
 }
 
-figure.chart > .vis-grid {
+figure.chart > .vis-row {
+  /* The top level container for gutter-left and vis-scroll. */
   flex-grow: 1; /* Expand to fill remaining space of chart. */
-  /* This 2x2 grid allocates minimum space for the gutter/tick areas,
-  and devotes the remaining space to the data visualization area. */
-  display: grid;
-  grid-template-columns: min-content auto; /* Left gutter, vis. */
-  grid-template-rows: auto min-content; /* vis, bottom gutter. */
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 0;
 }
 
-/* Quadrant containers. */
-figure.chart .ticks.y { /* The y-axis tick marks on the left. */
-  grid-area: 1 / 1 / 2 / 2; /* row-start / column-start / row-end / column-end */
+figure.chart > .vis-row > :is(.gutter-left, .vis-scroll) {
+  flex-direction: column-reverse;
+  display: flex;
+  row-gap: 0;
 }
-figure.chart .vis-scroll { /* The data visualization scolling container. */
-  grid-area: 1 / 2 / 2 / 3;
+
+figure.chart > .vis-row > .gutter-left {
+  flex: 0 0 auto; /* Shrink to fit; equivalent to min-content in grid. */
+}
+
+figure.chart > .vis-row > .vis-scroll {
+  /* X-axis scrollable area containing the visualization and the gutter-bottom.
+  Y-axis scrolling is unnecessary and would prevent the tick text from overflowing properly. */
+  flex: 1 1 auto; /* Fill space; equivalent to auto in grid. */
   min-width: 4rem;
   min-height: 1rem;
-}
-figure.chart .origin { /* The small square at the lower-left origin. */
-  grid-area: 2 / 1 / 3 / 2;
-}
-figure.chart .ticks-x-scroll { /* The x-axis tick marks on the bottom. */
-  grid-area: 2 / 2 / 3 / 3;
-}
-
-/* X-axis scrolling. Y-axis scrolling is unnecessary and prevents the tick text from overflowing. */
-figure.chart :is(.vis-scroll, .ticks-x-scroll) {
   overflow-x: auto;
 }
 
 @supports(scrollbar-width:none) {
-  figure.chart :is(.vis-scroll, .ticks-x-scroll) {
+  figure.chart > .vis-row > .vis-scroll {
     scrollbar-width: none; /* Hide scrollbar for Firefox. */
   }
 }
 
-figure.chart :is(.vis-scroll, .ticks-x-scroll)::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari, and Opera. */
-  height: 0;
+figure.chart > .vis-row > .vis-scroll::-webkit-scrollbar { /* Hide scrollbar for Chrome, Safari, and Opera. */
   overscroll-behavior: contain;
 }
 
-/* Quadrant scroll content sizing. */
-figure.chart :is(.vis, .ticks.x) {
-  min-width: 100%;
-  width: 100%;
-}
 figure.chart :is(.vis, .ticks.y) {
-  min-height: 100%;
-  height: 100%;
+  flex: 1 1 auto; /* Equivalent to auto in grid. */
+  min-height: calc(var(--tick-y-count) * 1em);
+}
+
+figure.chart :is(.origin, .ticks.x) {
+  height: calc(0.707 * var(--tick-font-scale) * var(--max-tick-x-label-len) + var(--tick-len) + 0.5rem);
+  min-height:1ch;
+
 }
 
 /* Tick gutters. */
+
 figure.chart .ticks {
   position: relative;
 }
@@ -97,14 +93,12 @@ figure.chart .ticks > div > span.tick {
   vertical-align: top;
 }
 
-
 /* The x-axis tick mark gutter on the bottom. */
 figure.chart .ticks.x {
   width: var(--vis-width);
-  height: calc(0.707 * var(--tick-font-scale) * var(--max-tick-label-len) + var(--tick-len) + 0.5rem);
   overflow: hidden; /* Prevents the tick text from adding weird trailing space on the right side. */
 }
-figure.chart .ticks.x > div { /*TODO: categorical-numerical. */
+figure.chart .ticks.x > div { /* TODO: categorical-numerical. */
   position: absolute;
   left: calc(1px + (var(--i) + 0.5) * (var(--bar-step)));
 }
@@ -133,9 +127,6 @@ Because of the zero size trick, we use a child span to hold the text.
 The parent div has zero height, so the text hangs below the specified vertical position.
 The child span allows us to use a transform that centers it around the specified position.
 */
-figure.chart .ticks.y {
-  /* TODO: negative padding and compensation so that the start and end tick text does not clip, but stays aligned. */
-}
 figure.chart .ticks.y > div {
   position: relative;
   height: 0;
@@ -188,7 +179,8 @@ figure.chart.categorical-numerical .vis > .series.bar > div {
   background-color: var(--series-color);
 }
 
-/* User style. */
+/* User-configurable style. */
+
 figure.chart * {
   box-sizing: border-box;
 }
@@ -208,19 +200,19 @@ figure.chart > .legend {
   padding: 0.5rem 0;
   background-color: lightgray;
 }
-figure.chart .vis-grid {
+figure.chart .vis-row {
 }
 figure.chart .origin {
-  background-color: #EFE;
+  background-color: inherit;
 }
 figure.chart .vis-scroll {
   height: auto;
 }
 figure.chart .ticks.x {
-  background-color: #FEE;
+  background-color: inherit;
 }
 figure.chart .ticks.y {
-  background-color: #EEF;
+  background-color: inherit;
 }
 figure.chart .ticks > div > span.label {
   font-size: calc(1em * var(--tick-font-scale));
@@ -243,9 +235,6 @@ figure.chart .ticks.y > div > span.tick {
   height: 1px;
 }
 
-figure.chart .series {
-  column-gap: 4px;
-}
 figure.chart .series > div {
     border-color: black;
 }
@@ -256,7 +245,14 @@ figure.chart .Series0 {
 figure.chart .Series1 {
   --series-color: #999;
 }
-.swatch {
+figure.chart .Series2 {
+  --series-color: #AAA;
+}
+figure.chart .Series3 {
+  --series-color: #BBB;
+}
+
+figure.chart .swatch {
   width: 1rem;
   height: 1rem;
   margin-right: 0.5rem;
